--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>grid-zip-connect-daily</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Ziip | Connect the dots</title>
+    <meta name="description" content="Open Source Game of LinkedIn's Zip" />
+    <meta name="author" content="Alexander Gekov" />
 
-    <meta property="og:title" content="grid-zip-connect-daily" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Ziip | Connect the dots" />
+    <meta
+      property="og:description"
+      content="Open Source Game of LinkedIn's Zip" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://utfs.io/f/9RkdvSiH3SqULQ5bWJmLOaKTqmJkMfx9lYjsdAPwytupXSD0" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="Ziip | Connect the dots" />
+    <meta name="twitter:site" content="ziip.vercel.app" />
+    <meta
+      name="twitter:image"
+      content="https://utfs.io/f/9RkdvSiH3SqULQ5bWJmLOaKTqmJkMfx9lYjsdAPwytupXSD0" />
   </head>
 
   <body>
